// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component Snapshots Custom class card style matches Snapshot 1`] = `
<div
  className="card  test"
>
  Test Child
</div>
`;

exports[`Card Component Snapshots Link card style matches Snapshot 1`] = `
<Link
  className="card clickable"
  replace={false}
  to="/test"
>
  Test Child
</Link>
`;

exports[`Card Component Snapshots OnClick card style matches Snapshot 1`] = `
<a
  className="card clickable"
  onClick={[MockFunction]}
>
  Test Child
</a>
`;

exports[`Card Component Snapshots Standard card style matches Snapshot 1`] = `
<div
  className="card "
>
  Test Child
</div>
`;
